Set fixed height on top nav for better alignment (#192)

--- a/media/css/m24/components/navigation-refresh.scss
+++ b/media/css/m24/components/navigation-refresh.scss
@@ -207,7 +207,7 @@ $margin-top: 58px; // top margin offset for mobile navigation menu
         content: '';
         background: url('/media/img/icons/caret-sprite.svg') no-repeat bottom left / auto 12px;
         display: inline-block;
-        height: 1em;
+        height: 12px;
         margin-left: $spacing-sm;
         vertical-align: baseline;
         width: 12px;
